objects/QIDC__OM_Field_Mapping_ims__c.object
<CustomObject>
    <description>Defines mappings between Org Manger attributes and SObject fields.</description>
    <fields>
        <fullName>QIDC__Has_Record_Mapping_ims__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this mapping will determine record type mappings.</description>
        <inlineHelpText>If checked, this mapping will determine record type mappings.</inlineHelpText>
        <label>Defines Record Mapping?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QIDC__Is_Primary_Key_ims__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Primary Key for the object mapping. Only one field can be Primary Key for a given mapping.</description>
        <inlineHelpText>The Primary Key for the object mapping. Only one field can be Primary Key for a given mapping.</inlineHelpText>
        <label>Is Primary Key?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QIDC__OM_Attribute_ims__c</fullName>
        <description>Developer name of attribute that links to the target Salesforce field.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Developer name of attribute that links to the target Salesforce field.</inlineHelpText>
        <label>Org Manager Attribute</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__OM_Object_Mapping_ims__c</fullName>
        <description>The Org Manager entity that the fields being mapped belong to.</description>
        <inlineHelpText>The Org Manager entity that the fields being mapped belong to.</inlineHelpText>
        <label>Org Manager Object Mapping</label>
        <referenceTo>QIDC__OM_Object_Mapping_ims__c</referenceTo>
        <relationshipLabel>Org Manager Field Mappings</relationshipLabel>
        <relationshipName>Org_Manager_Field_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QIDC__SObject_Field_ims__c</fullName>
        <description>Target Salesforce field that is mapped to the attribute.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Target Salesforce field that is mapped to the attribute.</inlineHelpText>
        <label>SObject Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Org Manager Field Mapping</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Org Manager Field Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Org Manager Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>